<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year"
        />

    <TextView
        android:id="@+id/tvMake"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make"
        />

    <TextView
        android:id="@+id/tvModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/model"
        />

    <TextView
        android:id="@+id/tvColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color"
        />

    <TextView
        android:id="@+id/tvEngine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/engine"
        />

    <TextView
        android:id="@+id/tvTransmission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transmission"
        />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titlestat"
        />

    <Button
        android:id="@+id/btOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/forresult"/>

    <Button
        android:id="@+id/btTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/bundle"/>

</LinearLayout>