<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PassForResult"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvHeader2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/tvYear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year"
        />

    <EditText
        android:id="@+id/etYearEdit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        />

    <TextView
        android:id="@+id/tvMake2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make"
        />

    <EditText
        android:id="@+id/etMakeEdit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        />

    <TextView
        android:id="@+id/tvModel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/model"
        />

    <EditText
        android:id="@+id/etModel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        />

    <TextView
        android:id="@+id/tvColor2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color"
        />

    <EditText
        android:id="@+id/etColorEdit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        />

    <TextView
        android:id="@+id/tvEngine2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/engine"
        />

    <EditText
        android:id="@+id/etEngineEdit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        />

    <TextView
        android:id="@+id/tvTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titlestat" />

    <EditText
        android:id="@+id/etTitleEdit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/tvTransmission2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transmission" />

    <EditText
        android:id="@+id/etTransmissionEdit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/btBackToMain2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="Submit" />

</LinearLayout>