<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThroughBundle"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvHeader3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/tvYear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year"
        />

    <EditText
        android:id="@+id/etYearEdit3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        />

    <TextView
        android:id="@+id/tvMake3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make"
        />

    <EditText
        android:id="@+id/etMakeEdit3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        />

    <TextView
        android:id="@+id/tvModel3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/model"
        />

    <EditText
        android:id="@+id/etModel3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        />

    <TextView
        android:id="@+id/tvColor3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color"
        />

    <EditText
        android:id="@+id/etColorEdit3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        />

    <TextView
        android:id="@+id/tvEngine3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/engine"
        />

    <EditText
        android:id="@+id/etEngineEdit3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        />

    <TextView
        android:id="@+id/tvTransmission3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transmission" />

    <EditText
        android:id="@+id/etTransmissionEdit3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/tvTitle3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titlestat" />

    <EditText
        android:id="@+id/etTitleEdit3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/btBackToMain3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="Submit" />

</LinearLayout>